2011-11-02  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: [REGRESSION] Clicking in a CSS property/value being edited commits the editor
        https://bugs.webkit.org/show_bug.cgi?id=71360

        Reviewed by Pavel Feldman.

        Selecting a selected TreeElement should be an idempotent operation.

        * inspector/front-end/treeoutline.js:
        (TreeElement.prototype.select):

2011-11-02  Ben Wells  <benwells@chromium.org>

        Canvas filling paths or rects need to be invalidate larger rects for some compositing modes.
        https://bugs.webkit.org/show_bug.cgi?id=70379

        Reviewed by James Robinson.

        Test: fast/canvas/canvas-composite-fill-repaint.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::fill):
        (WebCore::CanvasRenderingContext2D::fillRect):
        (WebCore::CanvasRenderingContext2D::drawImage):
        (WebCore::CanvasRenderingContext2D::didDrawEntireCanvas):
        * html/canvas/CanvasRenderingContext2D.h:

2011-11-01  Levi Weintraub  <leviw@chromium.org>

        Fix uses of LayoutUnit in Frame-, Scroll-, and RenderView
        https://bugs.webkit.org/show_bug.cgi?id=71321

        Reviewed by Darin Adler.

        Updating the usage of LayoutUnits in the *View classes to mirror the proper use
        as derived in the subpixellayout branch.

        This entails scrolling only with integers (and rounding once we've made the switch)
        and using integers for window coordinates, with LayoutUnits for content coordinates.

        No new tests -- no change in behavior.

        * page/FrameView.cpp:
        (WebCore::FrameView::invalidateRect):
        (WebCore::FrameView::setFrameRect):
        (WebCore::FrameView::zoomAnimatorTransformChanged):
        (WebCore::FrameView::scrollContentsFastPath):
        (WebCore::FrameView::scrollContentsSlowPath):
        (WebCore::FrameView::scrollElementToRect):